--- a/HW6/xiaocao_225040374.ipynb
+++ b/HW6/xiaocao_225040374.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "1a8969fd",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "272fcd0c",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "af15c3ae",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "261cf898",
    "metadata": {},
    "outputs": [
@@ -489,23 +489,23 @@
     "## Problem 3\n",
     "\n",
     "We are given the function $f: \\mathbb{R}^2 \\to \\mathbb{R}$:\n",
-    "$$ f(x, y) = \\frac{3}{4}x^4 + \\frac{1}{2}(x + y)^2 $$\n",
+    "$$ f(x, y) = \\frac{3}{4}x^{\\frac{4}{3}} + \\frac{1}{2}(x + y)^2 $$\n",
     "\n",
     "### (a) Find its global minimizer.\n",
     "\n",
     "To find the minimizer, we first find the critical points by setting the gradient of $f$ to zero.\n",
     "The gradient is:\n",
-    "$$ \\nabla f(x, y) = \\begin{pmatrix} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{pmatrix} = \\begin{pmatrix} 3x^3 + (x+y) \\\\ x+y \\end{pmatrix} $$\n",
+    "$$ \\nabla f(x, y) = \\begin{pmatrix} \\frac{\\partial f}{\\partial x} \\\\ \\frac{\\partial f}{\\partial y} \\end{pmatrix} = \\begin{pmatrix} x^{\\frac{1}{3}} + (x+y) \\\\ x+y \\end{pmatrix} $$\n",
     "Set the gradient to zero:\n",
-    "$$ \\begin{pmatrix} 3x^3 + (x+y) \\\\ x+y \\end{pmatrix} = \\begin{pmatrix} 0 \\\\ 0 \\end{pmatrix} $$\n",
+    "$$ \\begin{pmatrix} x^{\\frac{1}{3}} + (x+y) \\\\ x+y \\end{pmatrix} = \\begin{pmatrix} 0 \\\\ 0 \\end{pmatrix} $$\n",
     "From the second equation, we have $x+y=0$.\n",
-    "Substituting this into the first equation gives $3x^3 = 0$, which implies $x=0$.\n",
+    "Substituting this into the first equation gives $x^{1/3} = 0$, which implies $x=0$.\n",
     "Since $x+y=0$, we have $y = -x = 0$.\n",
     "The only critical point is $(0, 0)$.\n",
     "\n",
     "Now, we must determine if this point is a global minimizer.\n",
     "The function $f(x,y)$ is a sum of two non-negative terms:\n",
-    "- $\\frac{3}{4}x^4 \\ge 0$ for all $x$.\n",
+    "- $\\frac{3}{4}x^{\\frac{4}{3}} = \\frac{3}{4}(x^{\\frac{1}{3}})^4 \\ge 0$ for all $x$.\n",
     "- $\\frac{1}{2}(x+y)^2 \\ge 0$ for all $x, y$.\n",
     "Thus, $f(x, y) \\ge 0$ for all $(x, y) \\in \\mathbb{R}^2$.\n",
     "At the critical point $(0,0)$, the function value is $f(0,0) = 0$.\n",
@@ -518,31 +518,33 @@
     "where $\\mathbf{x}_k = (x_k, y_k)^T$.\n",
     "\n",
     "First, we compute the Hessian matrix $\\nabla^2 f(x, y)$:\n",
-    "$$ \\nabla^2 f(x, y) = \\begin{pmatrix} 9x^2+1 & 1 \\\\ 1 & 1 \\end{pmatrix} $$\n",
+    "$$ \\nabla^2 f(x, y) = \\begin{pmatrix} \\frac{1}{3}x^{-\\frac{2}{3}}+1 & 1 \\\\ 1 & 1 \\end{pmatrix} $$\n",
     "The inverse of the Hessian is:\n",
-    "$$ [\\nabla^2 f(x, y)]^{-1} = \\frac{1}{\\det(\\nabla^2 f)} \\begin{pmatrix} 1 & -1 \\\\ -1 & 9x^2+1 \\end{pmatrix} $$\n",
-    "The determinant is $\\det(\\nabla^2 f) = (9x^2+1)(1) - (1)(1) = 9x^2$.\n",
+    "$$ [\\nabla^2 f(x, y)]^{-1} = \\frac{1}{\\det(\\nabla^2 f)} \\begin{pmatrix} 1 & -1 \\\\ -1 & \\frac{1}{3}x^{-\\frac{2}{3}}+1 \\end{pmatrix} $$\n",
+    "The determinant is $\\det(\\nabla^2 f) = (\\frac{1}{3}x^{-\\frac{2}{3}}+1)(1) - (1)(1) = \\frac{1}{3}x^{-\\frac{2}{3}}$.\n",
     "The inverse is defined for $x \\ne 0$. The problem states we start with an initial point $(x_0, y_0)$ with $x_0 \\ne 0$.\n",
     "\n",
     "Let's compute the Newton step at a point $(x_k, y_k)$ where $x_k \\ne 0$:\n",
-    "$$ [\\nabla^2 f]^{-1} \\nabla f = \\frac{1}{9x_k^2} \\begin{pmatrix} 1 & -1 \\\\ -1 & 9x_k^2+1 \\end{pmatrix} \\begin{pmatrix} 3x_k^3 + x_k+y_k \\\\ x_k+y_k \\end{pmatrix} $$\n",
+    "$$ [\\nabla^2 f]^{-1} \\nabla f = \\left(3x_k^{\\frac{2}{3}}\\right) \\begin{pmatrix} 1 & -1 \\\\ -1 & \\frac{1}{3}x_k^{-\\frac{2}{3}}+1 \\end{pmatrix} \\begin{pmatrix} x_k^{\\frac{1}{3}} + x_k+y_k \\\\ x_k+y_k \\end{pmatrix} $$\n",
     "The top component of the resulting vector is:\n",
-    "$$ \\frac{1}{9x_k^2} [ (3x_k^3 + x_k+y_k) - (x_k+y_k) ] = \\frac{3x_k^3}{9x_k^2} = \\frac{x_k}{3} $$\n",
+    "$$ 3x_k^{\\frac{2}{3}} [ (x_k^{\\frac{1}{3}} + x_k+y_k) - (x_k+y_k) ] = 3x_k^{\\frac{2}{3}} (x_k^{\\frac{1}{3}}) = 3x_k $$\n",
     "The bottom component is:\n",
-    "$$ \\frac{1}{9x_k^2} [ -(3x_k^3 + x_k+y_k) + (9x_k^2+1)(x_k+y_k) ] = \\frac{1}{9x_k^2} [ -3x_k^3 - (x_k+y_k) + 9x_k^2(x_k+y_k) + (x_k+y_k) ] = \\frac{-3x_k^3 + 9x_k^2(x_k+y_k)}{9x_k^2} = -\\frac{x_k}{3} + x_k+y_k $$\n",
+    "$$ 3x_k^{\\frac{2}{3}} [ -(x_k^{\\frac{1}{3}} + x_k+y_k) + (\\frac{1}{3}x_k^{-\\frac{2}{3}}+1)(x_k+y_k) ] $$\n",
+    "$$ = 3x_k^{\\frac{2}{3}} [ -x_k^{\\frac{1}{3}} - (x_k+y_k) + \\frac{1}{3}x_k^{-\\frac{2}{3}}(x_k+y_k) + (x_k+y_k) ] $$\n",
+    "$$ = 3x_k^{\\frac{2}{3}} [ -x_k^{\\frac{1}{3}} + \\frac{1}{3}x_k^{-\\frac{2}{3}}(x_k+y_k) ] = -3x_k + (x_k+y_k) $$\n",
     "So, the update rule is:\n",
-    "$$ \\begin{pmatrix} x_{k+1} \\\\ y_{k+1} \\end{pmatrix} = \\begin{pmatrix} x_k \\\\ y_k \\end{pmatrix} - \\begin{pmatrix} x_k/3 \\\\ -x_k/3 + x_k+y_k \\end{pmatrix} $$\n",
-    "$$ x_{k+1} = x_k - \\frac{x_k}{3} = \\frac{2}{3}x_k $$\n",
-    "$$ y_{k+1} = y_k - (-\\frac{x_k}{3} + x_k+y_k) = y_k + \\frac{x_k}{3} - x_k - y_k = -\\frac{2}{3}x_k $$\n",
-    "The expression for $(x_{k+1}, y_{k+1})$ is $(\\frac{2}{3}x_k, -\\frac{2}{3}x_k)$.\n",
+    "$$ \\begin{pmatrix} x_{k+1} \\\\ y_{k+1} \\end{pmatrix} = \\begin{pmatrix} x_k \\\\ y_k \\end{pmatrix} - \\begin{pmatrix} 3x_k \\\\ -3x_k + (x_k+y_k) \\end{pmatrix} $$\n",
+    "$$ x_{k+1} = x_k - 3x_k = -2x_k $$\n",
+    "$$ y_{k+1} = y_k - (-3x_k + x_k+y_k) = y_k + 3x_k - x_k - y_k = 2x_k $$\n",
+    "The expression for $(x_{k+1}, y_{k+1})$ is $(-2x_k, 2x_k)$.\n",
     "\n",
-    "The problem asks to prove that Newton's method does not converge to the global minimizer. However, my derivation shows that it does converge.\n",
+    "Now prove that starting from $(x_0, y_0)$ with $x_0 \\ne 0$, Newton's method does not converge to the global minimizer.\n",
     "Let's analyze the sequence of iterates starting from $(x_0, y_0)$ with $x_0 \\ne 0$:\n",
-    "- $x_k = (\\frac{2}{3})^k x_0$\n",
-    "- For $k \\ge 1$, $y_k = -\\frac{2}{3}x_{k-1} = -\\frac{2}{3}(\\frac{2}{3})^{k-1}x_0 = -(\\frac{2}{3})^k x_0$.\n",
-    "As $k \\to \\infty$, since $|\\frac{2}{3}| < 1$, both $x_k \\to 0$ and $y_k \\to 0$. The sequence of iterates $(\\mathbf{x}_k)_{k \\ge 1}$ converges to $(0,0)$.\n",
-    "\n",
-    "**Note on Convergence:** The method *does* converge to the global minimizer $(0,0)$. The likely intent of the question relates to the *rate* of convergence. Newton's method typically exhibits quadratic convergence. However, at the minimizer $(0,0)$, the Hessian is $\\nabla^2 f(0,0) = \\begin{pmatrix} 1 & 1 \\\\ 1 & 1 \\end{pmatrix}$, which is singular. A non-singular Hessian at the solution is a condition for quadratic convergence. Because the condition is not met, the method converges linearly (with a rate of 2/3), not quadratically. This might be what was meant by \"does not converge [as expected for Newton's method]\".\n",
+    "- $x_k = (-2)^k x_0$\n",
+    "- $y_k = 2x_{k-1} = 2(-2)^{k-1}x_0 = (-2)^k x_0$ for $k \\ge 1$.\n",
+    "The sequence for $x_k$ is $x_0, -2x_0, 4x_0, -8x_0, \\dots$.\n",
+    "Since $|-2| > 1$, the magnitude $|x_k| = 2^k |x_0|$ diverges to infinity as $k \\to \\infty$ (unless $x_0=0$).\n",
+    "Therefore, the sequence of iterates $(x_k, y_k)$ does not converge to the global minimizer $(0,0)$.\n",
     "\n",
     "### (c) Projected gradient descent\n",
     "\n",
@@ -553,29 +555,32 @@
     "\n",
     "Given a point $\\mathbf{x}_k = (x_k, y_k)$ on the line $x_k+y_k=1$.\n",
     "1. Compute $\\mathbf{z}_{k+1} = (z_{k+1,1}, z_{k+1,2})^T$:\n",
-    "   $$ \\nabla f(x_k, y_k) = \\begin{pmatrix} 3x_k^3 + (x_k+y_k) \\\\ x_k+y_k \\end{pmatrix} = \\begin{pmatrix} 3x_k^3 + 1 \\\\ 1 \\end{pmatrix} $$\n",
-    "   $$ z_{k+1,1} = x_k - \\alpha_k(3x_k^3 + 1) $$\n",
+    "   $$ \\nabla f(x_k, y_k) = \\begin{pmatrix} x_k^{\\frac{1}{3}} + (x_k+y_k) \\\\ x_k+y_k \\end{pmatrix} $$\n",
+    "   Since $x_k+y_k=1$, the gradient becomes:\n",
+    "   $$ \\nabla f(x_k, y_k) = \\begin{pmatrix} x_k^{\\frac{1}{3}} + 1 \\\\ 1 \\end{pmatrix} $$\n",
+    "   $$ z_{k+1,1} = x_k - \\alpha_k(x_k^{\\frac{1}{3}} + 1) $$\n",
     "   $$ z_{k+1,2} = y_k - \\alpha_k(1) $$\n",
     "2. Project $\\mathbf{z}_{k+1}$ onto the line $x+y=1$. The projection of a point $(z_1, z_2)$ onto the line $x+y=c$ is given by $x = \\frac{z_1-z_2+c}{2}, y = \\frac{-z_1+z_2+c}{2}$. Here $c=1$.\n",
     "   $$ x_{k+1} = \\frac{z_{k+1,1} - z_{k+1,2} + 1}{2} $$\n",
-    "   $$ y_{k+1} = \\frac{-z_{k+1,1} + z_{k+1,2} + 1}{2} = 1 - x_{k+1} $$\n",
+    "   $$ y_{k+1} = 1 - x_{k+1} $$\n",
     "Substituting the expressions for $z_{k+1,1}$ and $z_{k+1,2}$:\n",
-    "$$ z_{k+1,1} - z_{k+1,2} = (x_k - \\alpha_k(3x_k^3 + 1)) - (y_k - \\alpha_k) = x_k - y_k - 3\\alpha_k x_k^3 - \\alpha_k + \\alpha_k = x_k - y_k - 3\\alpha_k x_k^3 $$\n",
+    "$$ z_{k+1,1} - z_{k+1,2} = (x_k - \\alpha_k(x_k^{\\frac{1}{3}} + 1)) - (y_k - \\alpha_k) $$\n",
+    "$$ = x_k - y_k - \\alpha_k x_k^{\\frac{1}{3}} - \\alpha_k + \\alpha_k = x_k - y_k - \\alpha_k x_k^{\\frac{1}{3}} $$\n",
     "Now substitute this into the expression for $x_{k+1}$:\n",
-    "$$ x_{k+1} = \\frac{(x_k - y_k - 3\\alpha_k x_k^3) + 1}{2} $$\n",
+    "$$ x_{k+1} = \\frac{(x_k - y_k - \\alpha_k x_k^{\\frac{1}{3}}) + 1}{2} $$\n",
     "Since $(x_k, y_k)$ is on the line, $y_k = 1 - x_k$.\n",
-    "$$ x_{k+1} = \\frac{x_k - (1-x_k) - 3\\alpha_k x_k^3 + 1}{2} = \\frac{2x_k - 1 - 3\\alpha_k x_k^3 + 1}{2} = x_k - \\frac{3}{2}\\alpha_k x_k^3 $$\n",
+    "$$ x_{k+1} = \\frac{x_k - (1-x_k) - \\alpha_k x_k^{\\frac{1}{3}} + 1}{2} = \\frac{2x_k - 1 - \\alpha_k x_k^{\\frac{1}{3}} + 1}{2} = x_k - \\frac{\\alpha_k}{2} x_k^{\\frac{1}{3}} $$\n",
     "And $y_{k+1} = 1 - x_{k+1}$.\n",
     "\n",
     "So, one iteration is:\n",
-    "$$ x_{k+1} = x_k - \\frac{3}{2}\\alpha_k x_k^3 $$\n",
+    "$$ x_{k+1} = x_k - \\frac{\\alpha_k}{2} x_k^{\\frac{1}{3}} $$\n",
     "$$ y_{k+1} = 1 - x_{k+1} $$\n",
     "This is the expression for one iteration of projected gradient descent."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "de27db9a",
    "metadata": {},
    "outputs": [
@@ -584,44 +589,33 @@
      "output_type": "stream",
      "text": [
       "Running Newton's Method...\n",
-      "As shown in the markdown, the iterates converge linearly to (0,0),\n",
-      "which contradicts the problem statement. This is due to the singular\n",
-      "Hessian at the minimizer.\n",
+      "As shown in the markdown, for this corrected function, Newton's method\n",
+      "diverges, with the magnitude of iterates growing for x_0 != 0.\n",
       "\n",
       "--- Newton's Method Results ---\n",
-      " iteration        x         y       f(x,y)\n",
-      "         0 2.000000  5.000000 3.650000e+01\n",
-      "         1 1.333333 -1.333333 2.370370e+00\n",
-      "         2 0.888889 -0.888889 4.682213e-01\n",
-      "         3 0.592593 -0.592593 9.248816e-02\n",
-      "         4 0.395062 -0.395062 1.826927e-02\n",
-      "         5 0.263374 -0.263374 3.608744e-03\n",
-      "         6 0.175583 -0.175583 7.128383e-04\n",
-      "         7 0.117055 -0.117055 1.408076e-04\n",
-      "         8 0.078037 -0.078037 2.781384e-05\n",
-      "         9 0.052025 -0.052025 5.494092e-06\n",
-      "        10 0.034683 -0.034683 1.085253e-06\n",
-      "        11 0.023122 -0.023122 2.143709e-07\n",
-      "        12 0.015415 -0.015415 4.234487e-08\n",
-      "        13 0.010276 -0.010276 8.364419e-09\n",
-      "        14 0.006851 -0.006851 1.652231e-09\n",
-      "        15 0.004567 -0.004567 3.263666e-10\n",
+      " iteration     x     y    f(x,y)\n",
+      "         0   1.0   0.0  1.250000\n",
+      "         1  -2.0   2.0  1.889882\n",
+      "         2   4.0  -4.0  4.762203\n",
+      "         3  -8.0   8.0 12.000000\n",
+      "         4  16.0 -16.0 30.238105\n",
+      "         5 -32.0  32.0 76.195250\n",
       "\n",
       "======================================================================\n",
       "\n",
       "--- Projected Gradient Descent Results (alpha=0.1) ---\n",
-      " iteration        x         y    f(x,y)\n",
-      "         0 2.000000 -1.000000 12.500000\n",
-      "         1 0.800000  0.200000  0.807200\n",
-      "         2 0.723200  0.276800  0.705161\n",
-      "         3 0.666463  0.333537  0.647967\n",
-      "         4 0.622059  0.377941  0.612302\n",
-      "         5 0.585953  0.414047  0.588412\n",
-      "         6 0.555775  0.444225  0.571558\n",
-      "         7 0.530025  0.469975  0.559190\n",
-      "         8 0.507690  0.492310  0.549826\n",
-      "         9 0.488062  0.511938  0.542556\n",
-      "        10 0.470623  0.529377  0.536792\n",
+      " iteration        x         y   f(x,y)\n",
+      "         0 2.000000 -1.000000 2.389882\n",
+      "         1 1.937004 -0.937004 2.310931\n",
+      "         2 1.874676 -0.874676 2.233656\n",
+      "         3 1.813025 -0.813025 2.158057\n",
+      "         4 1.752056 -0.752056 2.084134\n",
+      "         5 1.691779 -0.691779 2.011887\n",
+      "         6 1.632201 -0.632201 1.941317\n",
+      "         7 1.573331 -0.573331 1.872424\n",
+      "         8 1.515178 -0.515178 1.805207\n",
+      "         9 1.457749 -0.457749 1.739667\n",
+      "        10 1.401056 -0.401056 1.675805\n",
       "\n",
       "======================================================================\n",
       "\n"
@@ -632,7 +626,7 @@
     "\"\"\"\n",
     "This script implements the optimization algorithms for Problem 3 of HW6.\n",
     "It includes Newton's method and projected gradient descent for the function\n",
-    "f(x, y) = (3/4)x^4 + (1/2)(x+y)^2.\n",
+    "f(x, y) = (3/4)x^(4/3) + (1/2)(x+y)^2.\n",
     "\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -648,7 +642,8 @@
     "        float: The function value.\n",
     "    \"\"\"\n",
     "    x, y = x_vec[0], x_vec[1]\n",
-    "    return 0.75 * x**4 + 0.5 * (x + y)**2\n",
+    "    # Use np.cbrt for cube root to handle negative numbers, then raise to power 4\n",
+    "    return 0.75 * (np.cbrt(x)**4) + 0.5 * (x + y)**2\n",
     "\n",
     "def grad_f(x_vec):\n",
     "    \"\"\"\n",
@@ -661,7 +656,8 @@
     "        np.ndarray: The gradient vector.\n",
     "    \"\"\"\n",
     "    x, y = x_vec[0], x_vec[1]\n",
-    "    return np.array([3 * x**3 + (x + y), x + y])\n",
+    "    # Derivative of x^(4/3) is (4/3)*x^(1/3)\n",
+    "    return np.array([np.cbrt(x) + (x + y), x + y])\n",
     "\n",
     "def hessian_f(x_vec):\n",
     "    \"\"\"\n",
@@ -674,7 +670,15 @@
     "        np.ndarray: The Hessian matrix.\n",
     "    \"\"\"\n",
     "    x, y = x_vec[0], x_vec[1]\n",
-    "    return np.array([[9 * x**2 + 1, 1], [1, 1]])\n",
+    "    # Derivative of x^(1/3) is (1/3)*x^(-2/3)\n",
+    "    # np.cbrt(x)**(-2) is equivalent to x^(-2/3) and handles negative numbers\n",
+    "    # Handle x=0 for x^(-2/3) which is undefined\n",
+    "    if x == 0: # Check before division\n",
+    "        # This case should ideally be handled by avoiding evaluation at x=0 for Hessian inverse\n",
+    "        # or by setting a large value to mimic \"infinity\" or handling a singular matrix.\n",
+    "        # For this problem, Newton's method already checks x[0] == 0 and stops.\n",
+    "        return np.array([[np.inf, 1], [1, 1]]) # Return with inf to trigger error/handling\n",
+    "    return np.array([[(1/3) * (np.cbrt(x)**(-2)) + 1, 1], [1, 1]])\n",
     "\n",
     "def newtons_method(x0_vec, num_iterations):\n",
     "    \"\"\"\n",
@@ -691,9 +695,8 @@
     "    history = []\n",
     "\n",
     "    print(\"Running Newton's Method...\")\n",
-    "    print(\"As shown in the markdown, the iterates converge linearly to (0,0),\")\n",
-    "    print(\"which contradicts the problem statement. This is due to the singular\")\n",
-    "    print(\"Hessian at the minimizer.\\n\")\n",
+    "    print(\"As shown in the markdown, for this corrected function, Newton's method\")\n",
+    "    print(\"diverges, with the magnitude of iterates growing for x_0 != 0.\\n\")\n",
     "\n",
     "    for k in range(num_iterations + 1):\n",
     "        f_x = f(x)\n",
@@ -701,15 +704,27 @@
     "        if k == num_iterations:\n",
     "            break\n",
     "\n",
-    "        if x[0] == 0:\n",
-    "            print(f\"Hessian is singular at iteration {k} (x=0). Stopping.\")\n",
+    "        # Handle x close to 0 to avoid division by zero in Hessian\n",
+    "        if np.isclose(x[0], 0.0):\n",
+    "            print(f\"Hessian becomes singular or ill-conditioned near x=0 at iteration {k}. Stopping.\")\n",
     "            break\n",
     "\n",
-    "        # Newton's step: x_k+1 = x_k - H_inv * g\n",
+    "        # Newton's step: x_k+1 = x_k - H_inv @ g\n",
     "        g = grad_f(x)\n",
-    "        H = hessian_f(x)\n",
-    "        H_inv = np.linalg.inv(H)\n",
-    "        x = x - H_inv @ g\n",
+    "        H = hessian_f(x) # Hessian calculation now handles x=0 itself.\n",
+    "\n",
+    "        # Check for singular Hessian and potential numerical issues.\n",
+    "        # det is (1/3) * (np.cbrt(x)**(-2))\n",
+    "        if np.isclose(np.linalg.det(H), 0.0) or np.any(np.isinf(H)) or np.any(np.isnan(H)):\n",
+    "            print(f\"Hessian is singular, infinite, or NaN at iteration {k}. Stopping.\")\n",
+    "            break\n",
+    "\n",
+    "        try:\n",
+    "            H_inv = np.linalg.inv(H)\n",
+    "            x = x - H_inv @ g\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            print(f\"Could not compute inverse of Hessian at iteration {k}. Stopping.\")\n",
+    "            break\n",
     "\n",
     "    return pd.DataFrame(history)\n",
     "\n",
@@ -737,16 +752,19 @@
     "        if k == num_iterations:\n",
     "            break\n",
     "\n",
-    "        # As derived, the update is x_{k+1} = x_k - (3/2)*alpha*x_k^3\n",
-    "        x[0] = x[0] - 1.5 * alpha * x[0]**3\n",
+    "        # As derived, the update is x_{k+1} = x_k - (alpha/2)*x_k^(1/3)\n",
+    "        x_val = x[0]\n",
+    "        # np.cbrt handles negative numbers correctly, no special checks needed for real results\n",
+    "        x[0] = x_val - (alpha/2) * np.cbrt(x_val)\n",
+    "\n",
     "        x[1] = 1 - x[0]\n",
     "\n",
     "    return pd.DataFrame(history)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # --- Part (b): Newton's Method ---\n",
-    "    x_initial_newton = np.array([2.0, 5.0]) # An initial point with x0 != 0\n",
-    "    iterations_newton = 15\n",
+    "    x_initial_newton = np.array([1.0, 0.0]) # An initial point with x0 != 0\n",
+    "    iterations_newton = 5 # Fewer iterations as it diverges quickly\n",
     "    history_newton = newtons_method(x_initial_newton, iterations_newton)\n",
     "    print(\"--- Newton's Method Results ---\")\n",
     "    print(history_newton.to_string(index=False))\n",
@@ -760,7 +778,7 @@
     "    history_pgd = projected_gradient_descent(x_initial_pgd, iterations_pgd, step_size_pgd)\n",
     "    print(\"--- Projected Gradient Descent Results (alpha=0.1) ---\")\n",
     "    print(history_pgd.to_string(index=False))\n",
-    "    print(\"\\n\" + \"=\"*70 + \"\\n\")"
+    "    print(\"\\n\" + \"=\"*70 + \"\\n\")\n"
    ]
   },
   {
